package main

import (
	"context"
	"fmt"
	"log"
	"time"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	pb "order/api/server/orderinternalapi"
)

func main() {
	// –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ Order Service (–ø–æ—Ä—Ç –ø—Ä–æ–±—Ä–æ—à–µ–Ω —Å–∫—Ä–∏–ø—Ç–æ–º run_demo.sh)
	conn, err := grpc.NewClient("localhost:8084", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("Did not connect: %v", err)
	}
	defer conn.Close()
	client := pb.NewOrderInternalAPIClient(conn)

	// –ò—Å–ø–æ–ª—å–∑—É–µ–º –∑–∞—Ä–∞–Ω–µ–µ –ø–æ–¥–≥–æ—Ç–æ–≤–ª–µ–Ω–Ω—ã–µ ID (–∫–æ—Ç–æ—Ä—ã–µ –º—ã –≤—Å—Ç–∞–≤–∏–º –≤ –ë–î —á–µ—Ä–µ–∑ —Å–∫—Ä–∏–ø—Ç)
	userID := "22222222-2222-2222-2222-222222222222"
	productID := "11111111-1111-1111-1111-111111111111"

	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	fmt.Println("--- Sending StoreOrder Request (Starting SAGA) ---")
	// –°–æ–∑–¥–∞–µ–º –∑–∞–∫–∞–∑
	resp, err := client.StoreOrder(ctx, &pb.StoreOrderRequest{
		CustomerID: userID,
		Status:     pb.OrderStatus_Open,
		Items: []*pb.OrderItem{
			{
				ProductID:  productID,
				Count:      1,
				TotalPrice: 100.0, // –£ –Ω–∞—Å –Ω–∞ —Å—á–µ—Ç—É –±—É–¥–µ—Ç 1000, –¥–æ–ª–∂–Ω–æ —Ö–≤–∞—Ç–∏—Ç—å
			},
		},
	})
	if err != nil {
		log.Fatalf("Error creating order: %v", err)
	}

	orderID := resp.OrderID
	fmt.Printf("Order Created with ID: %s\n", orderID)

	fmt.Println("--- Polling Order Status ---")
	// –û–ø—Ä–∞—à–∏–≤–∞–µ–º —Å—Ç–∞—Ç—É—Å, –ø–æ–∫–∞ –æ–Ω –Ω–µ —Å—Ç–∞–Ω–µ—Ç Paid –∏–ª–∏ Cancelled
	for i := 0; i < 20; i++ {
		r, err := client.FindOrder(ctx, &pb.FindOrderRequest{OrderID: orderID})
		if err != nil {
			log.Printf("Getting order error: %v", err)
		} else {
			fmt.Printf("Attempt %d: Status = %s\n", i+1, r.Status)

			if r.Status == pb.OrderStatus_Paid {
				fmt.Println("üéâ SUCCESS: Order is PAID! Saga finished successfully.")
				return
			}
			if r.Status == pb.OrderStatus_Cancelled {
				log.Fatalf("‚ùå FAILURE: Order was CANCELLED. Saga compensation triggered (maybe insufficient funds/stock?).")
			}
		}
		time.Sleep(1 * time.Second)
	}
	log.Fatalf("‚ùå TIMEOUT: Order status stuck.")
}
